added listServices method
