# services/service-router/openapi.json
@@ -66,7 +66,29 @@
           "IsMultiContentStreaming": false
         }
       }
-    }
+    },
+    "/servicerouter/v1/services": {
+      "get": {
+        "summary": "listServices",
+        "description": "Lists all services",
+        "operationId": "listServices",
+        "responses": {
+          "200": {
+            "description": "List of all servcies",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Service"
+                  }
+                }
+              }
+            }
+          }
+        }  
+      }  
+    } 
   },
   "components": {
     "schemas": {
